Add JavaFX application running instructions to README